# IMG4_Project

./: .gitignore  CMakeLists.txt
src/: image_generator.cpp  image_generator.h  main.cpp  utils.cpp  utils.h  xml_parser.cpp  xml_parser.h
